# swagger.json
@@ -1756,9 +1756,92 @@
           }
         }
       }
+    },
+    "/search/customers/by-number/{phone_number}": {
+      "get": {
+        "summary": "Search customers by phone number",
+        "tags": [
+          "Customer"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "phone_number",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "Customer's phone number"
+          }
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Customers found"
+          },
+          "400": {
+            "description": "Validation error"
+          }
+        }
+      }
+    },
+    "/add/customer": {
+      "post": {
+        "summary": "Add a new customer",
+        "tags": [
+          "Customer"
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "first_name": {
+                    "type": "string"
+                  },
+                  "last_name": {
+                    "type": "string"
+                  },
+                  "country_code": {
+                    "type": "string"
+                  },
+                  "iso_code": {
+                    "type": "string"
+                  },
+                  "phone_no": {
+                    "type": "string"
+                  },
+                  "role": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Customer added successfully"
+          },
+          "400": {
+            "description": "Validation error"
+          }
+        }
+      }
     }
   },
-"components": {
+ "components": {
   "securitySchemes": {
     "bearerAuth": {
       "type": "http",
